<http://webkit.org/b/82558> Toggling <input type="range"> readonly or disabled state while active breaks all click events

Source/WebCore:

Test: fast/forms/range/range-drag-when-toggled-disabled.html

Patch by Joseph Pecoraro <pecoraro@apple.com> on 2012-03-29
Reviewed by Kent Tamura.

* html/shadow/SliderThumbElement.cpp:
(WebCore::SliderThumbElement::defaultEventHandler):
A slider can toggle its readonly or disabled state while in the middle
of dragging, in those cases we should cancel the drag and perform cleanup.

LayoutTests:

Patch by Joseph Pecoraro <pecoraro@apple.com> on 2012-03-29
Reviewed by Kent Tamura.

* fast/forms/range/range-drag-when-toggled-disabled-expected.txt: Added.
* fast/forms/range/range-drag-when-toggled-disabled.html: Added.

Canonical link: https://commits.webkit.org/99955@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@112547 268f45cc-cd09-0410-ab3c-d52691b4dbfc